--- a/joerc.in
+++ b/joerc.in
@@ -75,6 +75,10 @@
 		looks like an ANSI terminal (support bold and capability starts with
 		ESC [).
 
+-guess_crlf     Automatically detect MS-DOS files and set -crlf appropriately
+
+-guess_indent	Guess indent character (tab or space).
+
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
@@ -163,6 +167,8 @@
 
         -picture                Picture mode (right arrow can go past end of lines)
 
+	-lmargin nnn		Left margin
+
 	-rmargin nnn		Right margin
 
 
@@ -187,9 +193,15 @@
 	-msold macro		Macro to execute when existing files are saved
 
 	Macros for the above options are in the same format as in the key
+	-square			Rectangular block mode
+	These define the language syntax for ^G (goto matching delimiter):
 	Macros for the above options are in the same format as in the key
 	binding section below- but without the key name strings.
  Default local options
+-highlight
+-istep 2
+
+ Use this macro (put in first column) to have joe "p4 edit" a file you're about to change.
 *
 -wordwrap
 
@@ -197,65 +209,218 @@
 *.*
 
  Diff
-*
-+#!\+\[ 	]\+\[a-z/]/perl\>
-+#!\+\[ 	]/usr/bin/\<perl\>
--syntax perl
--smarthome
--highlight
-*.pl
- Text file.
 *.txt
 -wordwrap
+
+ News/mail files.
+*
++#!\+\[ 	]\+\[a-z/]/perl\>
+-autoindent
+-syntax perl
+-smarthome
+*.pl
+-autoindent
+-syntax perl
+-smarthome
  SQL file
 *.c
 -autoindent
 -syntax c
 -smarthome
--highlight
+-smartbacks
+-purify
+-single_quoted
 *.cpp
 *.h
 -autoindent
 -syntax c
 -smarthome
--highlight
+-smartbacks
+-purify
+-single_quoted
 *.hpp
 *.v
 -autoindent
 -syntax verilog
 -istep 2
--highlight
 -smarthome
+-smartbacks
+-purify
+-c_comment
+ Verilog header file
+*.vhd
+-autoindent
+-syntax vhdl
+-istep 2
+-smarthome
+-smartbacks
+-purify
+-vhdl_comment
  XML
- Perl library file
-*.pl
+*.htm
+-wordwrap
+-autoindent
+-syntax html
+
+*.html
+-wordwrap
+-autoindent
+-syntax html
+
+ JAVA
+*.java
+-autoindent
 -syntax java
--syntax perl
--highlight
+-smarthome
+-smartbacks
+-purify
+
  Hypertext preprocessor file
+*.php
 -autoindent
 -syntax php
 -smarthome
--highlight
+-smartbacks
+-purify
+
+ Python
+*
++#!\+\[ 	]\+\[a-z/]/python\>
+-autoindent
+-syntax python
+-smarthome
+-smartbacks
+-purify
+
 *.py
 -autoindent
 -syntax python
 -smarthome
--highlight
+-smartbacks
+-purify
+
+ CSH
+*
++#!\+\[ 	]\+\[a-z/]/sh\>
+-autoindent
+-syntax sh
+-pound_comment
 *.sh
 -autoindent
 -syntax sh
 -pound_comment
--highlight
 *profile
- Makefiles and rc files.
+*
++#!\+\[ 	]\+\[a-z/]/bash\>
 -autoindent
+-syntax sh
+-pound_comment
+*.bash
 -autoindent
-*rc
+-syntax sh
+-pound_comment
+*.bash_login
+ CSH
+*
++#!\+\[ 	]\+\[a-z/]/csh\>
+-syntax sh
+-syntax csh
+ LISP
+*.csh
+-syntax lisp
+-syntax csh
+*.lsp
+ TCSH
+*
++#!\+\[ 	]\+\[a-z/]/tcsh\>
+-syntax lisp
+-syntax csh
+*.el
+*.tcsh
+-syntax lisp
+-syntax csh
+ KSH
+*
++#!\+\[ 	]\+\[a-z/]/ksh\>
+-autoindent
+-syntax sh
+-pound_comment
+*.ksh
+-autoindent
+-syntax sh
+-pound_comment
+ Makefile
+*akefile
+-autoindent
+-syntax conf
+-pound_comment
+*AKEFILE
+-autoindent
+-syntax conf
+-pound_comment
  Pascal
 *.p
 -autoindent
 -syntax pascal
+-smarthome
+-smartbacks
+-purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
+*.pas
+-autoindent
+-syntax pascal
+-smarthome
+-smartbacks
+-purify
+-text_delimiters begin|BEGIN|record|RECORD|case|CASE=end|END:repeat|REPEAT=until|UNTIL
+ Fortran
+*.f
+-autoindent
+-syntax fortran
+
+*.for
+-autoindent
+-syntax fortran
+
+*.FOR
+-autoindent
+-syntax fortran
+
+ TCL
+ YACC
+*.y
+-autoindent
+-syntax yacc
+
+ LEX
+*.l
+-autoindent
+-syntax lex
+
+*.tcl
+-autoindent
+-syntax tcl
+
+ Joe Syntax File
+*.jsf
+-autoindent
+-syntax conf
+
+ Autoconfig file
+*.ac
+-autoindent
+-syntax conf
+
+ M4 file
+*.m4
+-autoindent
+-syntax m4
+
+ Automake file
+*.am
+-autoindent
+-syntax conf
+
  Mail file
 
  Use \i to turn on/off inverse video
@@ -332,7 +497,7 @@
 {Joe
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
 \i   Help Screen    turn off with ^KH    prev. screen ^[,                        \i
-\i \i Send bug reports to: Marek 'Marx' Grac (xgrac@fi.muni.cz)                   \i \i
+\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \i \i
 
  FOURTH SECTION: Key bindings:
 
