Fix rtarw: was not fixing xcol.
TAB key now does smart indenting.

smart home goes to real home first, then indentation point.

--- a/jmacsrc.in
+++ b/jmacsrc.in
@@ -222,6 +222,15 @@
 -smartbacks
 -purify
 
+ Verilog header file
+*.vh
+-autoindent
+-syntax verilog
+-istep 2
+-smarthome
+-smartbacks
+-purify
+
  VHDL file
 *.vhd
 -autoindent
