--- a/configure.ac
+++ b/configure.ac
@@ -116,5 +116,7 @@ AH_VERBATIM([_PARAMS],[/* Check to see if we can use strict prototypes */
 #  endif
 #endif])
 
-AC_CONFIG_FILES([Makefile joe.1 joerc jmacsrc jstarrc rjoerc jpicorc syntax/c.jsf syntax/perl.jsf syntax/verilog.jsf syntax/sh.jsf syntax/python.jsf syntax/conf.jsf syntax/php.jsf])
+AC_CONFIG_FILES([Makefile joe.1 joerc jmacsrc jstarrc rjoerc jpicorc
+syntax/c.jsf syntax/perl.jsf syntax/verilog.jsf syntax/sh.jsf syntax/python.jsf
+syntax/conf.jsf syntax/php.jsf syntax/mail.jsf])
 AC_OUTPUT
