--- a/syntax/perl.jsf.in
+++ b/syntax/perl.jsf.in
@@ -3,12 +3,12 @@
 # Define colors
 
 =Idle
-=Preproc bold blue
-=Comment bold cyan
-=Constant bold magenta
-=Escape bold red
-=Type bold green
-=Keyword bold yellow
+=Preproc blue
+=Comment green
+=Constant cyan
+=Escape bold cyan
+=Type bold
+=Keyword bold
 
 :idle Idle
 	*		idle
