--- a/rjoerc.in
+++ b/rjoerc.in
@@ -213,10 +213,20 @@
 +#!\+\[ 	]\+\[a-z/]/perl\>
 -autoindent
 -syntax perl
+-smarthome
+-smartbacks
 
 *.pl
 -autoindent
 -syntax perl
+-smarthome
+-smartbacks
+
+*.pm
+-autoindent
+-syntax perl
+-smarthome
+-smartbacks
 
  C language file
 *.c
@@ -425,6 +435,11 @@
 *.am
 -autoindent
 -syntax conf
+
+ Mail file
+*tmp/mutt-*
+-autoindent
+-syntax mail
 
  THIRD SECTION: Named help screens:
 
