--- a/syntax/java.jsf.in
+++ b/syntax/java.jsf.in
@@ -12,16 +12,28 @@
 =Type 		bold
 =Keyword 	bold
 =Operator	bold
+=Bad		bold red
+=Brace		magenta
+=Control
 
 :idle Idle
 	*		idle
 	"\n"		idle
 	"/"		slash
-	"0-9"		first_digit	recolor=-1
+	"0"		first_digit	recolor=-1
+	"1-9"		decimal	recolor=-1
 	"."		maybe_float
 	"\""		string		recolor=-1
 	"'"		char		recolor=-1
 	"a-zA-Z_"	ident		buffer
+	"{}"		brace		recolor=-1
+	",:;=()><[]*&|!~+\-%^"	control		recolor=-1
+
+:brace Brace
+	*	idle	noeat
+
+:control Control
+	*	idle	noeat
 
 :slash Idle
 	*		idle		noeat
@@ -45,15 +57,27 @@
 	*		idle	noeat
 	"xX"		hex
 	"."		float
-	"0-9"		first_number
+	"eE"		epart
+	"0-7"		octal
+	"89"		bad_number	recolor=-1
+
+:bad_number Bad
+	*		idle	noeat
+	"0-9"		bad_number
+
+:octal Constant
+	*		idle	noeat
+	"0-7"		octal
+	"89"		bad_number	recolor=-1
 
 :hex Constant
 	*		idle	noeat
 	"0-9A-Fa-f"	hex
 
-:first_number Constant
+:decimal Constant
 	*		idle	noeat
-	"0-9"		first_number
+	"0-9"		decimal
+	"eE"		epart
 	"."		float
 
 :maybe_float Constant
@@ -77,20 +101,62 @@
 	*		string
 	"\""		idle
 	"\\"		string_escape	recolor=-1
+	"%"		string_control	recolor=-1
 
 :string_escape Escape
 	*		string
+	"x"		string_hex1
+	"0-7"		string_octal2
 	"\n"		string		recolor=-2
+
+:string_hex1 Escape
+	*		string		noeat
+	"0-9a-fA-F"	string_hex2
+
+:string_hex2 Escape
+	*		string		noeat
+	"0-9a-fA-F"	string
+
+:string_octal2 Escape
+	*		string		noeat
+	"0-7"		string_octal3
+
+:string_octal3 Escape
+	*		string		noeat
+	"0-7"		string
+
+:string_control Escape
+	*		string_control
+	"\n"		reset
+	"diouxXeEfFgGaAcspn%SC"	string
 
 :char Constant
 	*		char
-	"\n"		idle
+	"\n"		reset
 	"'"		idle
 	"\\"		char_escape	recolor=-1
 
 :char_escape	Escape
 	*		char
+	"x"		char_hex1
+	"0-7"		char_octal2
 	"\n"		char		recolor=-2
+
+:char_hex1 Escape
+	*		char		noeat
+	"0-9a-fA-F"	char_hex2
+
+:char_hex2 Escape
+	*		char		noeat
+	"0-9a-fA-F"	char
+
+:char_octal2 Escape
+	*		char		noeat
+	"0-7"		char_octal3
+
+:char_octal3 Escape
+	*		char		noeat
+	"0-7"		char
 
 :ident Idle
 	*		idle		noeat strings
