--- a/Makefile.am
+++ b/Makefile.am
@@ -21,20 +21,19 @@ noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	macro.h main.h menu.h path.h poshist.h pw.h queue.h qw.h rc.h regex.h \
 	scrn.h tab.h termcap.h tty.h tw.h types.h ublock.h uedit.h uerror.h \
 	ufile.h uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h \
-	utils.h va.h vfile.h vs.h w.h utf8.h syntax.h i18n.h
+	utils.h va.h vfile.h vs.h w.h utf8.h syntax.h i18n.h charmap.h
 
 
 bin_PROGRAMS = joe termidx
 INCLUDES = -DJOERC="\"$(sysconf_joedir)/\""
 
-# Sometimes this is needed...
-joe_LDADD = @REQRD_LIBS@
+# joe_LDADD = @REQRD_LIBS@
 
 joe_SOURCES = b.c blocks.c bw.c cmd.c hash.c help.c kbd.c macro.c main.c menu.c \
 	path.c poshist.c pw.c queue.c qw.c rc.c regex.c scrn.c tab.c termcap.c \
 	tty.c tw.c ublock.c uedit.c uerror.c ufile.c uformat.c uisrch.c umath.c \
 	undo.c usearch.c ushell.c utag.c va.c vfile.c vs.c w.c utils.c syntax.c \
-	utf8.c selinux.c i18n.c
+	utf8.c selinux.c i18n.c charmap.c
 
 termidx_SOURCES = termidx.c
 
