--- a/configure.ac
+++ b/configure.ac
@@ -106,11 +106,11 @@ joe_REINSTALL_SIGHANDLERS
 
 # check if -liconv is necessary
 # if iconv() is in libc, don't bother with -liconv
-AC_CHECK_LIB(c,iconv,
-  [REQRD_LIBS= ],
-  [REQRD_LIBS=-liconv])
-
-AC_SUBST(REQRD_LIBS)
+#AC_CHECK_LIB(c,iconv,
+#  [REQRD_LIBS= ],
+#  [REQRD_LIBS=-liconv])
+#
+#AC_SUBST(REQRD_LIBS)
 
 dnl not yet :-)
 dnl AM_GNU_GETTEXT
