--- a/joerc.in
+++ b/joerc.in
@@ -115,7 +115,7 @@
   \f  Blink
 
 -lmsg \i%k%T%W%I%X %n %m%y%R %M %x
--lmsg \i%k%T%W%I%X %n %y%m%R %M
+-lmsg \i%k%T%W%I%X %n %m%y%R %M
 
  SECOND SECTION: File name dependant local option settings:
 
