--- a/joerc.in
+++ b/joerc.in
@@ -689,10 +689,23 @@ upslide,upslide,upslide,upslide		MWUP
 yankpop		^[ y		Undelete text
 yank		^[ Y		Undelete text
 yankpop		^[ Y		Undelete text
-drop_no_redrop,rtarw	^[ [ 1 ; 5 C	Mark right
-drop_no_redrop,ltarw	^[ [ 1 ; 5 D    Mark left
-drop_no_redrop,uparw    ^[ [ 1 ; 5 A    Mark up
-drop_no_redrop,dnarw    ^[ [ 1 ; 5 B    Mark down
+ toggle_marking	^@		Ctrl-space block selection method
+select,rtarw,markk    ^[ [ 1 ; 5 C    Mark right
+select,rtarw,markk    ^[ 5 C          Mark right
+
+select,ltarw,markk    ^[ [ 1 ; 5 D    Mark left
+select,ltarw,markk    ^[ 5 D   	      Mark left
+
+select,uparw,markk    ^[ [ 1 ; 5 A    Mark up
+select,uparw,markk    ^[ 5 A          Mark up
+
+select,dnarw,markk    ^[ [ 1 ; 5 B    Mark down
+select,dnarw,markk    ^[ 5 B          Mark down
+
+blkdel		^[ [ 3 ; 5 -	Gnome-terminal Ctrl-Del
+blkdel		^[ [ 3 ; 5 ~	Xterm Ctrl-Del
+yank		^[ [ 2 ; 5 -	Gnome-terminal Ctrl-Ins
+yank		^[ [ 2 ; 5 ~    Xterm Ctrl-Ins
 
 nbuf		^[ v		Next buffer
  pbuf		^[ .		Next buffer
